chore: build base curtains plane

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,9 @@
   </head>
   <body>
     <main>
-      <h1>Hello Vite</h1>
+      <div id="canvas"></div>
+
+      <div class="container" data-plane></div>
     </main>
     <script type="module" src="/js/index.js"></script>
   </body>
